--- a/css/style.css
+++ b/css/style.css
@@ -1,309 +1,437 @@
-* {
-    margin: 0;
-    padding: 0;
-    margin-bottom: 0;
-}
-
-body {
-    font-family: 'Rubik', sans-serif;
-}
-
-header {
-    margin: 0 100px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.navigation-item {
-    padding: 15px;
-    list-style-type: none;
-    text-decoration: none;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-
-.navigation-link,
-.login-link {
-    text-decoration: none;
-    color: #4E5983;
-}
-
-.button {
-    border: none;
-    padding: 14px 18px;
-    border-radius: 9px;
-    margin-left: 30px;
-    font-family: 'Rubik', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    color: #4E5983;
-}
-
-.calc {
-    background: linear-gradient(140.59deg, #562EC2 29.59%, #A07EFE 73.59%);
-    border-radius: 17px;
-    padding-bottom: 120px;
-}
-
-.calc-header {
-    padding-top: 113px;
-    display: block;
-    text-align: center;
-    color: #fff;
-    font-size: 60px;
-    font-family: 'Rubik', sans-serif;
-    font-weight: bold;
-}
-
-.calc-info {
-    margin-top: 20px;
-    display: block;
-    text-align: center;
-    color: #fff;
-    font-size: 19px;
-    font-weight: 400;
-    margin-bottom: 40px;
-}
-
-.calc-change {
-    padding: 80px 15px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    background: #FFFFFF;
-    opacity: 0.8;
-    border: 4px solid #F7F8FD;
-    box-sizing: border-box;
-    border-radius: 26px;
-}
-
-.calc-change-title {
-    color: #4E5983;
-    font-size: 18px;
-    font-weight: 600;
-    font-family: Rubik;
-    line-height: 21px;
-}
-
-.comission {
-    font-size: 12px;
-    color: #4E5983;
-}
-
-.calc-change-sum {
-    display: block;
-    margin-top: 30px;
-    font-size: 12px;
-    color: #4E5983;
-}
-
-.calc-input {
-    border: none;
-}
-
-.input-sum {
-    border: none;
-    border-right: 1px solid #CFD4DA;
-    height: 25px;
-}
-
-.input-sum::placeholder {
-    font-size: 18px;
-    color: #CFD4DA;
-}
-
-.select-currency {
-    border: none;
-}
-
-.bank-logo {
-    width: 37px;
-    height: 28px;
-}
-
-.money-logo {
-    width: 30px;
-    height: 30px;
-}
-
-.arrows {
-    padding-bottom: 15px;
-}
-
-.icon-change {
-    margin: 0 15px;
-}
-
-.button-change {
-    font-size: 18px;
-    font-weight: 700;
-    border: none;
-    color: #fff;
-    width: 157px;
-    height: 55px;
-    background: linear-gradient(140.59deg, #562EC2 29.59%, #A07EFE 73.59%);
-    opacity: 0.8;
-    border-radius: 9px;
-}
-
-
-/** info **/
-
-.info {
-    margin: 100px;
-}
-
-.info-title {
-    font-family: Rubik;
-    font-weight: 500;
-    font-size: 22px;
-    line-height: 26px;
-    color: #4E5983;
-    margin-bottom: 32px;
-}
-
-.info-description {
-    height: 170px;
-    font-size: 18px;
-    line-height: 30px;
-    color: #4E5983;
-    opacity: 0.7;
-}
-
-.img-wrapper {
-    text-align: center;
-    margin: 30px 0px;
-    height: 150px;
-    width: 200px;
-}
-
-
-/* * history */
-
-.history {
-    padding: 0 100px;
-    background: linear-gradient(180deg, #EFF2FA 0%, rgba(255, 255, 255, 0) 96.57%) no-repeat;
-    opacity: 0.8;
-    background-repeat: no-repeat;
-    background-position-y: 200px;
-}
-
-.history-content {
-    padding-top: 100px;
-    padding-left: 152px;
-    padding-bottom: 80px;
-}
-
-.history-wrapper {
-    background: #fff;
-    border: 4px solid #F7F8FD;
-    border-radius: 26px;
-    filter: drop-shadow(0px 4px 4px rgba(76, 97, 171, 0.25));
-}
-
-.history-title {
-    font-weight: 700;
-    font-size: 35px;
-    line-height: 46px;
-    color: #160647;
-}
-
-.history-description {
-    font-size: 18px;
-    line-height: 30px;
-    color: #4E5983;
-    opacity: 0.7;
-}
-
-.image-history-wrapper {}
-
-.image-history {
-    width: 100%;
-}
-
-
-/* * валюты */
-
-.currency-reserve {
-    margin-top: 140px;
-}
-
-.reserve-title {
-    font-weight: 500;
-    font-size: 35px;
-    line-height: 39px;
-    text-align: center;
-    color: #160647;
-    margin-bottom: 40px;
-}
-
-.currency {
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
-.currency-icon {
-    height: 52px;
-    width: 52px;
-    border-radius: 50%;
-    margin-right: 32px;
-    text-align: center;
-    vertical-align: center;
-    position: relative;
-}
-
-.icon-currency {
+    * {
+        margin: 0;
+        padding: 0;
+        margin-bottom: 0;
+    }
+    
+    body {
+        font-family: 'Rubik', sans-serif;
+    }
+    
+    header {
+        margin: 0 100px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    
+     :active,
+     :hover,
+     :focus {
+        outline: 0;
+        outline-offset: 0;
+    }
+    
+    .navigation-item {
+        padding: 15px;
+        list-style-type: none;
+        text-decoration: none;
+        /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
+    }
+    
+    .navigation-link,
+    .login-link {
+        text-decoration: none;
+        color: #4E5983;
+    }
+    
+    .button {
+        border: none;
+        padding: 14px 18px;
+        border-radius: 9px;
+        margin-left: 30px;
+        font-family: 'Rubik', sans-serif;
+        font-weight: 400;
+        font-size: 16px;
+        color: #4E5983;
+        cursor: pointer;
+    }
+    
+    .calc {
+        background: url(../img/c985868a0601b080fe300c583a981a28.png), linear-gradient(140.59deg, rgba(86, 46, 194, 1) 29.59%, rgba(160, 126, 254, 1) 73.59%);
+        background-size: cover;
+        border-radius: 17px;
+        padding-bottom: 120px;
+    }
+    /*.calc-container::before {
+    background: url(../img/c985868a0601b080fe300c583a981a28.png);
     position: absolute;
-    margin: auto;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-}
-
-.yandex {
-    background-color: rgba(255, 168, 0, .1);
-}
-
-.ethereum {
-    background: rgba(83, 108, 195, .1);
-}
-
-.bitcoin {
-    background: rgba(255, 187, 54, .1);
-}
-
-.sberbank {
-    background: rgba(43, 158, 47, .1);
-}
-
-.privat {
-    background: rgba(117, 175, 38, .1);
-}
-
-.paypal {
-    background: rgba(3, 169, 244, .1);
-}
-
-.pm {
-    background: rgba(218, 37, 28, .1);
-}
-
-.qiwi {
-    background: rgba(255, 140, 0, .1);
-}
-
-.currency-name {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 23px;
-    color: #A4AABF;
-    margin-bottom: 0;
-}
-
-.rate {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 20px;
-    color: #160647;
-}
-
-
-/* * clients */
+} */
+    
+    .calc-header {
+        padding-top: 113px;
+        display: block;
+        text-align: center;
+        color: #fff;
+        font-size: 60px;
+        font-family: 'Rubik', sans-serif;
+        font-weight: bold;
+    }
+    
+    .calc-info {
+        margin-top: 20px;
+        display: block;
+        text-align: center;
+        color: #fff;
+        font-size: 19px;
+        font-weight: 400;
+        margin-bottom: 40px;
+    }
+    
+    .calc-change {
+        padding: 80px 15px;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        background: rgba(240, 238, 247, .99);
+        border: 0px solid #F7F8FD;
+        box-sizing: border-box;
+        border-radius: 26px;
+    }
+    
+    .calc-change-title {
+        color: #4E5983;
+        font-size: 18px;
+        font-weight: 600;
+        font-family: 'Rubik';
+        line-height: 21px;
+    }
+    
+    .comission {
+        font-size: 12px;
+        color: #4E5983;
+    }
+    
+    .calc-change-sum {
+        display: block;
+        margin-top: 30px;
+        font-size: 12px;
+        color: #4E5983;
+    }
+    
+    .calc-input {
+        font-size: 18px;
+        background: rgba(255, 255, 255, .0);
+    }
+    
+    .input-sum {
+        font-size: 20px;
+        line-height: 24px;
+        letter-spacing: 0.015em;
+        color: rgb(164, 170, 191);
+        height: 50px;
+        background: rgba(255, 255, 255, .0);
+        border: none;
+        border-right: 1px solid #CFD4DA;
+    }
+    
+    .input-sum::placeholder {
+        font-size: 20px;
+        line-height: 24px;
+        letter-spacing: 0.015em;
+        font-size: 18px;
+        color: #4E5983;
+    }
+    
+    .select-currency {
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 19px;
+        color: #4E5983;
+        background: rgba(255, 255, 255, .0);
+        border: none;
+    }
+    
+    .select-currency>select:active,
+    .select-currency>select:focus {
+        background: no-repeat transparent;
+    }
+    
+    .bank-logo {
+        width: 37px;
+        height: 28px;
+    }
+    
+    .money-logo {
+        width: 30px;
+        height: 30px;
+    }
+    
+    .arrows {
+        padding-bottom: 15px;
+    }
+    
+    .icon-change {
+        margin: 0 15px;
+    }
+    
+    .calc-line {
+        border: 0;
+        height: 1px;
+        background-image: linear-gradient(to right, rgba(207, 212, 218, 0), rgba(207, 212, 218, 0.9), rgba(207, 212, 218, 0));
+        margin-top: 3px;
+    }
+    
+    .button-change {
+        font-size: 18px;
+        font-weight: 700;
+        border: none;
+        color: #fff;
+        width: 157px;
+        height: 55px;
+        background: linear-gradient(140.59deg, #562EC2 29.59%, #A07EFE 73.59%);
+        opacity: 0.8;
+        border-radius: 9px;
+        cursor: pointer;
+    }
+    /** info **/
+    
+    .info {
+        margin: 100px;
+    }
+    
+    .info-title {
+        font-family: Rubik;
+        font-weight: 500;
+        font-size: 22px;
+        line-height: 26px;
+        color: #4E5983;
+        margin-bottom: 32px;
+    }
+    
+    .info-description {
+        height: 170px;
+        font-size: 18px;
+        line-height: 30px;
+        color: #4E5983;
+        opacity: 0.7;
+    }
+    
+    .img-wrapper {
+        text-align: center;
+        margin: 30px 0px;
+        /* height: 150px;
+    width: 200px; */
+    }
+    
+    .image-history-wrapper {
+        max-width: 100%;
+        /* object-fit: cover; */
+    }
+    /* * history */
+    
+    .history {
+        padding: 0 100px;
+        background: linear-gradient(180deg, rgb(255, 255, 255) 50%, rgb(239, 242, 250) 50%, rgb(255, 255, 255)) no-repeat;
+    }
+    
+    .history-content {
+        padding-top: 100px;
+        padding-left: 152px;
+        padding-bottom: 80px;
+    }
+    
+    .history-wrapper {
+        background: #fff;
+        border: 4px solid #F7F8FD;
+        border-radius: 26px;
+        filter: drop-shadow(0px 4px 4px rgba(76, 97, 171, 0.25));
+    }
+    
+    .history-title {
+        font-weight: 700;
+        font-size: 35px;
+        line-height: 46px;
+        color: #160647;
+    }
+    
+    .history-description {
+        font-size: 18px;
+        line-height: 30px;
+        color: #4E5983;
+        opacity: 0.7;
+    }
+    
+    .image-history {
+        width: 100%;
+    }
+    /* * валюты */
+    
+    .currency-reserve {
+        margin-top: 140px;
+    }
+    
+    .reserve-title {
+        font-weight: 500;
+        font-size: 35px;
+        line-height: 39px;
+        text-align: center;
+        color: #160647;
+        margin-bottom: 80px;
+    }
+    
+    .currency-info {
+        margin-bottom: 80px;
+    }
+    
+    .currency-icon {
+        height: 52px;
+        width: 52px;
+        border-radius: 50%;
+        margin-right: 32px;
+        text-align: center;
+        vertical-align: center;
+        position: relative;
+    }
+    
+    .icon-currency {
+        position: absolute;
+        margin: auto;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        right: 0;
+    }
+    
+    .yandex {
+        background-color: rgba(255, 168, 0, .1);
+    }
+    
+    .ethereum {
+        background: rgba(83, 108, 195, .1);
+    }
+    
+    .bitcoin {
+        background: rgba(255, 187, 54, .1);
+    }
+    
+    .sberbank {
+        background: rgba(43, 158, 47, .1);
+    }
+    
+    .privat {
+        background: rgba(117, 175, 38, .1);
+    }
+    
+    .paypal {
+        background: rgba(3, 169, 244, .1);
+    }
+    
+    .pm {
+        background: rgba(218, 37, 28, .1);
+    }
+    
+    .qiwi {
+        background: rgba(255, 140, 0, .1);
+    }
+    
+    .currency-name {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 23px;
+        color: #A4AABF;
+        margin-bottom: 0;
+    }
+    
+    .rate {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 20px;
+        color: #160647;
+    }
+    /* * clients */
+    
+    .clients {
+        padding-left: 50px;
+    }
+    
+    .clients-title {
+        margin-top: 80px;
+        font-weight: 500;
+        font-size: 35px;
+        line-height: 46px;
+        color: #160647;
+    }
+    
+    .comment {
+        margin-left: -50px;
+        padding-left: 50px;
+        padding-right: 100px;
+        padding-top: 100px;
+        background: url(../img/group.png) no-repeat;
+        background-position-x: -100px;
+    }
+    
+    .clients-comment {
+        min-height: 160px;
+        margin: 15px 0;
+        font-size: 18px;
+        line-height: 30px;
+        color: rgba(78, 89, 131, .7);
+    }
+    
+    .clients-name {
+        font-size: 20px;
+        line-height: 31px;
+        color: #160647;
+    }
+    
+    .comment-date {
+        margin-left: 30px;
+        font-size: 14px;
+        line-height: 17px;
+        color: #838BA8;
+    }
+    /* * start-exchange */
+    
+    .start-exchange {
+        margin-top: 100px;
+        margin-bottom: 140px;
+    }
+    
+    .start-exchange-container {
+        background: linear-gradient(140.59deg, #562EC2 29.59%, #A07EFE 73.59%);
+        border-radius: 17px;
+    }
+    
+    .img-wrapper-exchange {
+        margin-top: -180px;
+        margin-left: -100px;
+        margin-bottom: -200px;
+        overflow: hidden;
+    }
+    
+    .img-exchange {
+        height: 100%;
+    }
+    
+    .exchange {
+        margin-top: 80px;
+        padding-right: 130px;
+    }
+    
+    .exchange-title {
+        font-weight: 500;
+        font-size: 35px;
+        line-height: 46px;
+        color: #FFFFFF;
+        margin-bottom: 20px;
+    }
+    
+    .exchange-subtitle {
+        font-size: 18px;
+        line-height: 30px;
+        color: rgba(255, 255, 255, .7);
+    }
+    
+    .button-exchange {
+        background-color: rbga(255, 255, 255, .8);
+        border-radius: 12px;
+        margin-top: 50px;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 19px;
+        text-align: center;
+        color: #9F7DFD;
+        padding: 25px 50px;
+        border: none;
+        cursor: pointer;
+        margin-bottom: 50px;
+    }
