--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
         font-family: 'Rubik', sans-serif;
     }
     
-    header {
+    header,
+    footer {
         margin: 0 100px;
         padding-top: 20px;
         padding-bottom: 20px;
