--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,7 @@
     
     header,
     footer {
-        margin: 0 100px;
-        padding-top: 20px;
-        padding-bottom: 20px;
+        padding: 20px;
     }
     
      :active,
@@ -167,12 +165,14 @@
     
     .calc-line {
         border: 0;
+        width: 80%;
         height: 1px;
         background-image: linear-gradient(to right, rgba(207, 212, 218, 0), rgba(207, 212, 218, 0.9), rgba(207, 212, 218, 0));
         margin-top: 3px;
     }
     
     .button-change {
+        margin-top: 20px;
         font-size: 18px;
         font-weight: 700;
         border: none;
@@ -187,7 +187,7 @@
     /** info **/
     
     .info {
-        margin: 100px;
+        margin-top: 100px;
     }
     
     .info-title {
@@ -210,7 +210,8 @@
     .img-wrapper {
         text-align: center;
         margin: 30px 0px;
-        /* height: 150px;
+        height: 150px;
+        /*
     width: 200px; */
     }
     
@@ -221,13 +222,13 @@
     /* * history */
     
     .history {
-        padding: 0 100px;
+        padding: 0;
         background: linear-gradient(180deg, rgb(255, 255, 255) 50%, rgb(239, 242, 250) 50%, rgb(255, 255, 255)) no-repeat;
     }
     
     .history-content {
         padding-top: 100px;
-        padding-left: 152px;
+        padding-left: 100px;
         padding-bottom: 80px;
     }
     
@@ -437,4 +438,45 @@
         border: none;
         cursor: pointer;
         margin-bottom: 50px;
+    }
+    
+    @media (max-width: 992px) {
+        header,
+        footer {
+            padding: 20px 0;
+        }
+        .history-content {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+        .info-description {
+            text-align: center;
+            height: 100px;
+        }
+        .info-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .info-description:last-child {
+            margin-bottom: 30px;
+        }
+        .exchange {
+            text-align: center;
+            margin-top: 50px;
+            padding: 12px;
+        }
+    }
+    
+    @media (max-width: 576px) {
+        .currency-info {
+            margin-left: 70px;
+            margin-bottom: 20px;
+        }
+        .calc-header {
+            font-size: 28px;
+        }
+        .input-sum {
+            width: 100px;
+        }
     }
