--- a/css/style.css
+++ b/css/style.css
@@ -469,8 +469,16 @@
     }
     
     @media (max-width: 576px) {
+        .calc-container {
+            margin: 0;
+        }
+        .calc-change {
+            padding: 15px;
+            margin: 0;
+            margin-left: 5px;
+        }
         .currency-info {
-            margin-left: 70px;
+            padding-left: 70px;
             margin-bottom: 20px;
         }
         .calc-header {
