--- a/css/style.css
+++ b/css/style.css
@@ -33,11 +33,14 @@
         color: #4E5983;
     }
     
+    .login-link {
+        padding-right: 10px;
+    }
+    
     .button {
         border: none;
         padding: 14px 18px;
         border-radius: 9px;
-        margin-left: 30px;
         font-family: 'Rubik', sans-serif;
         font-weight: 400;
         font-size: 16px;
@@ -51,10 +54,11 @@
         border-radius: 17px;
         padding-bottom: 120px;
     }
-    /*.calc-container::before {
-    background: url(../img/c985868a0601b080fe300c583a981a28.png);
-    position: absolute;
-} */
+    
+    .calc-container::before {
+        margin: 0;
+        padding: 0;
+    }
     
     .calc-header {
         padding-top: 113px;
@@ -397,7 +401,7 @@
     
     .img-wrapper-exchange {
         margin-top: -180px;
-        margin-left: -100px;
+        margin-left: -120px;
         margin-bottom: -200px;
         overflow: hidden;
     }
@@ -471,6 +475,7 @@
     @media (max-width: 576px) {
         .calc-container {
             margin: 0;
+            width: 90%;
         }
         .calc-change {
             padding: 15px;
