--- a/css/style.css
+++ b/css/style.css
@@ -207,8 +207,7 @@
         height: 170px;
         font-size: 18px;
         line-height: 30px;
-        color: #4E5983;
-        opacity: 0.7;
+        color: rgba(78, 89, 131, .7);
     }
     
     .img-wrapper {
@@ -334,7 +333,7 @@
         font-weight: 400;
         font-size: 16px;
         line-height: 23px;
-        color: #A4AABF;
+        color: #838ba8;
         margin-bottom: 0;
     }
     
@@ -445,8 +444,8 @@
     }
     
     @media (max-width: 991px) {
-        header,
-        footer {
+        .header,
+        .footer {
             padding: 20px 0;
         }
         .history-content {
